--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Installing Node
-        uses: actions/setup.node@v2-beta
+        uses: actions/setup-node@v2.1.2
         with:
           node-version: v14.18.1
 
