--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -31,6 +31,6 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Installing surge
-        run: npm i surge
+        run: npm install --global surge
       - name: deploying using surge
         run: surge ./ terrific-van.surge.sh --token ${{ secrets.SURGETOKEN }}
